tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float32_4D_tensor_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor options.bias, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML layer_norm with empty axes requires special handling (not yet implemented)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  consts {
    operand_0: f32[1, 4, 3] @bytes([142, 157, 251, 64, 111, 66, 106, 192, 168, 147, 222, 192, 222, 182, 204, 192, 158, 54, 81, 64, 219, 252, 47, 192, 20, 151, 130, 192, 110, 106, 228, 192, 81, 115, 7, 65, 138, 205, 48, 64, 7, 179, 82, 63, 196, 246, 116, 192]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=0, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
