tests/snapshots/run_wpt_conformance__coreml_leakyRelu_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
leaky_relu.https.any.js leakyRelu float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([195, 204, 89, 82, 89, 212, 9, 213, 166, 213, 192, 84, 37, 84, 66, 213, 76, 204, 120, 213, 213, 194, 177, 205, 5, 193, 188, 76, 42, 86, 235, 82, 38, 208, 193, 209, 175, 211, 4, 84, 94, 77, 225, 207, 41, 209, 26, 212]);
  }

  nodes {
    [leakyReluOutput] = leakyRelu(operand_0, alpha=0.01, label="");
  }

  outputs { leakyReluOutput; }
}
